Fix typo in qbluetoothsocket_android.cpp

Amends 7d2c6ae66fd61be56b35ae0c59354b695a02d6c7

Fixes: QTBUG-98353
Change-Id: I85e8c7d2b8f1dd90df68a5846708045052dd163d
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 9013f62006fda61c762061e9d2ce91f12c68a3f5)